--- a/samples/dotnetcore/getting-started/mywebapi/charts/mywebapi/values.yaml
+++ b/samples/dotnetcore/getting-started/mywebapi/charts/mywebapi/values.yaml
@@ -7,13 +7,13 @@ image:
   repository: mywebapi
   tag: stable
   pullPolicy: IfNotPresent
-imagePullSecrets: []
+imagePullSecrets:
   # Optionally specify an array of imagePullSecrets.
   # Secrets must be manually created in the namespace.
   # ref: https://kubernetes.io/docs/concepts/containers/images/#specifying-imagepullsecrets-on-a-pod
   #
   # This uses credentials from secret "myRegistryKeySecretName".
-  # - name: myRegistryKeySecretName
+  - name: acr-auth
 service:
   type: ClusterIP
   port: 80
